Fix footer active tab CSS on mobile

--- a/src/assets/components/Footer/Footer.scss
+++ b/src/assets/components/Footer/Footer.scss
@@ -23,6 +23,10 @@
   }
 }
 
+.nav-item__footer {
+  padding: 15px 5px;
+}
+
 .nav-container__footer {
   @media (max-width: 768px) {
     width: 100%;
